k8s/2-dataset-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataset-service-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataset-service-backend
  template:
    metadata:
      labels:
        app: dataset-service-backend
    spec:
      serviceAccountName: dataset-service-backend
      volumes:
        - name: dataset-service-data-volume
          persistentVolumeClaim:
            claimName: dataset-service-data
        - name: datalake-volume
          cephfs:
            path: "/datalake"
            monitors: 
              - "192.168.3.22:6789"
              - "192.168.3.49:6789"
              - "192.168.3.37:6789"
            user: dataset-service
            secretRef:
              name: dataset-service-ceph-user-secret
            readOnly: false
        - name: datasets-volume
          cephfs:
            path: "/datasets"
            monitors: 
              - "192.168.3.22:6789"
              - "192.168.3.49:6789"
              - "192.168.3.37:6789"
            user: dataset-service
            secretRef:
              name: dataset-service-ceph-user-secret
            readOnly: false
      containers:
        - name: dataset-service-backend
          image:  harbor.chaimeleon-eu.i3m.upv.es/chaimeleon-services/dataset-service-backend:2.5
          ports:
            - containerPort: 11000
              name: dssport
          volumeMounts:
            - mountPath: "/dataset-service/log"
              subPath: "log"
              name: dataset-service-data-volume
            - mountPath: "/var/www/dataset-service-ui"
              subPath: "ui"
              name: dataset-service-data-volume
            - mountPath: "/var/www/datalakeinfo"
              subPath: "datalakeinfo"
              name: dataset-service-data-volume
            - mountPath: "/mnt/datalake"
              name: datalake-volume
            - mountPath: "/mnt/datasets"
              name: datasets-volume
          resources:
            requests:
              memory: "320Mi"
              cpu: "300m"
      priorityClassName: core-services
      nodeSelector: 
        chaimeleon.eu/target: core-services
      restartPolicy: Always
      
---
apiVersion: v1
kind: Service
metadata:
  name: dataset-service-backend-service
spec:
  selector:
    app: dataset-service-backend
  ports:
    - port: 11000
      protocol: TCP
      targetPort: dssport
