k8s/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: dataset-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: postgres-data-pv
          persistentVolumeClaim:
            claimName: postgres-data
      containers:
      - name: db
#       image: "postgres:12"
        image: "harbor.chaimeleon-eu.i3m.upv.es/dockerhub/library/postgres:12"
        ports:
          - containerPort: 5432
            # standard postgres DB port
            name: "dbport"
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: postgres-data-pv
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: dataset-service
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataset-service-backend
  namespace: dataset-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataset-service-backend
  template:
    metadata:
      labels:
        app: dataset-service-backend
    spec:
      serviceAccountName: dataset-service-backend
      volumes:
        - name: dataset-service-data-volume
          persistentVolumeClaim:
            claimName: dataset-service-data
        - name: datalake-volume
          cephfs:
            path: "/data"
            monitors: 
              - "192.168.3.8:6789"
            user: dataset-service
            secretRef:
              name: dataset-service-ceph-user-secret
            readOnly: false
        - name: datasets-volume
          cephfs:
            path: "/datasets"
            monitors: 
              - "192.168.3.8:6789"
            user: dataset-service
            secretRef:
              name: dataset-service-ceph-user-secret
            readOnly: false
      containers:
        - name: dataset-service-backend
          image:  harbor.chaimeleon-eu.i3m.upv.es/chaimeleon-services/dataset-service-backend:1.82
          ports:
            - containerPort: 11000
              name: dssport
          volumeMounts:
            - mountPath: "/dataset-service/log"
              subPath: "log"
              name: dataset-service-data-volume
            - mountPath: "/var/www/dataset-service-ui"
              subPath: "ui"
              name: dataset-service-data-volume
            - mountPath: "/mnt/datalake"
              name: datalake-volume
            - mountPath: "/mnt/datasets"
              name: datasets-volume
          resources:
            requests:
              memory: "250Mi"
              cpu: "300m"
      restartPolicy: Always
      
---
apiVersion: v1
kind: Service
metadata:
  name: dataset-service-backend-service
  namespace: dataset-service
spec:
  selector:
    app: dataset-service-backend
  ports:
    - port: 11000
      protocol: TCP
      targetPort: dssport

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dataset-service-backend-proxy
  namespace: dataset-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#   nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
# tls:
#   - hosts:
#       - chaimeleon-eu.i3m.upv.es
#         secretName:  chaimeleon-eu.i3m.upv.es
  rules:
    - host: chaimeleon-eu.i3m.upv.es
      http:
        paths:
          - path: /dataset-(service|manager)/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dataset-service-backend-service
                port:
                  number: 11000
